[package]
name = "hpfeeds"
version = "0.1.0"
authors = ["Chance <albatross@loftwing.net>"]
edition = "2018"
description = "Hpfeeds3 protocol library"
keywords = ["hpfeeds", "honeypot"]
categories = ["network-programming"]
maintenance = { status = "as-is"}
repository = "https://github.com/loftwing/hpfeeds"
license = "AGPL-3.0-or-later"

[dependencies]
byteorder = "*"
simple-error = "*"
log = "*"
sha-1 = "*"