[package]
name = "hpfeeds"
version = "0.1.0"
authors = ["Chance <albatross@loftwing.net>"]
edition = "2018"
description = "Hpfeeds3 protocol library"
keywords = ["hpfeeds", "honeypot"]
categories = ["network-programming"]
maintenance = { status = "as-is"}
repository = "https://github.com/loftwing/hpfeeds"
license = "AGPL-3.0-or-later"

[dependencies]
byteorder = "1.3.1"
simple-error = "0.1.13"
log = "0.4.6"
sha-1 = "0.8.1"